# jcp-v2

./: .env  .env.example  .gitgnore  main.py  pyproject.toml
adapters/: duckdb_store.py  metadata_store.py  milvus_adapter.py
app/: app.py
data/: metadata.duckdb  milvus_lite.db
scripts/: drop_demo_collection.py  init_metadata_db.py  init_milvus_lite_demo.py  insert_demo_metadata.py  smoke_test.py
sql/: schema_duckdb.sql
xtra/: crispr.csv  gene_annotations.csv  orf.csv
